--- a/StockDataDownloader/CmdUtility/App.config
+++ b/StockDataDownloader/CmdUtility/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <appSettings>
+    <add key="username" value="YourIntrinioUserName"/>
+    <add key="password" value="YourIntrinioPassword"/>
+  </appSettings>
 </configuration>
