--- a/StockDataDownloader/CmdUtility/CmdUtility.csproj
+++ b/StockDataDownloader/CmdUtility/CmdUtility.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IntrinioDownloaderLib">
+      <HintPath>..\IntrinioDownloaderLib\bin\Debug\IntrinioDownloaderLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
