--- a/TradingAnalyticsPlatform/CmdUtility/CmdUtility.csproj
+++ b/TradingAnalyticsPlatform/CmdUtility/CmdUtility.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UserLib">
+      <HintPath>..\UserLib\bin\Debug\UserLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CmdUtility.cs" />
