--- a/TradingAnalyticsPlatform/StockDataDownloader/App.config
+++ b/TradingAnalyticsPlatform/StockDataDownloader/App.config
@@ -11,4 +11,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="username" value="YourIntinioUserName"/>
+    <add key="password" value="YourIntinioPassword"/>
+    <add key="tickers" value="tickers delimited with space, example: AAPL SNAP"/>
+  </appSettings>
 </configuration>
