--- a/TradingAnalyticsPlatform/StockDataDownloader/StockDataDownloader.csproj
+++ b/TradingAnalyticsPlatform/StockDataDownloader/StockDataDownloader.csproj
@@ -45,6 +45,9 @@
       <HintPath>..\packages\InfluxData.Net.6.0.1\lib\InfluxData.Net.Kapacitor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="IntrinioDownloaderLib">
+      <HintPath>..\IntrinioDownloaderLib\bin\Debug\IntrinioDownloaderLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
       <Private>True</Private>
@@ -62,6 +65,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -79,10 +83,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UserLib">
+      <HintPath>..\UserLib\bin\Debug\UserLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockDataDownloader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
